src/objects/Functionality_Access_Master__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <externalId>true</externalId>
        <label>Module Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PermissionSet_Ids__c</fullName>
        <description>Ids of permission sets will be stored separating by &apos;;&apos;</description>
        <label>PermissionSet Ids</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Permission_Sets__c</fullName>
        <description>Name of all permission sets will be saved separating by &apos;;&apos;</description>
        <label>Permission Sets</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Functionality Access Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Module_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FAM-{0000}</displayFormat>
        <label>Functionality Access Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Functionality Access Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>